@@ -1,19 +1,24 @@
 package com.navi.user.security;
 
+import com.navi.user.enums.UserRole;
 import com.navi.user.repository.HistoryRepository;
 import com.navi.user.repository.TryLoginRepository;
 import com.navi.user.repository.UserRepository;
-import com.navi.user.security.Filter.JWTCheckFilter;
-import com.navi.user.security.Filter.TryLoginFilter;
+import com.navi.user.security.filter.JWTCheckFilter;
+import com.navi.user.security.filter.TryLoginFilter;
 import com.navi.user.security.handler.ApiFailHandler;
 import com.navi.user.security.handler.ApiLogoutSuccessHandler;
 import com.navi.user.security.handler.ApiSuccessHandler;
 import com.navi.user.security.util.JWTUtil;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -23,11 +28,12 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
 public class SecurityConfig {
+
     private final TryLoginRepository tryLoginRepository;
     private final JWTUtil jwtUtil;
     private final ApiLogoutSuccessHandler apiLogoutSuccessHandler;
@@ -35,57 +41,71 @@ public class SecurityConfig {
     private final HistoryRepository historyRepository;
 
     @Bean
-    SecurityFilterChain filterChain(HttpSecurity security) throws Exception {
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         // CORS 설정
-        security.cors(httpSecurityCorsConfigurer -> {
-            httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource());
-        });
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource()));
 
-        // 세션 관리 정책 설정
-        security.sessionManagement(sessionConfig -> sessionConfig.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+        // 세션 비활성화 (JWT 사용)
+        http.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
-        // CSRF 설정
-        security.csrf(config -> config.disable());
+        // CSRF 비활성화
+        http.csrf(csrf -> csrf.disable());
 
-        security.authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/users/login", "/api/users/logout", "/api/auth/oauth/**").permitAll()
-                        .anyRequest().authenticated());
+        // 요청별 권한 설정 (anyRequest는 반드시 마지막!)
+        http.authorizeHttpRequests(auth -> auth
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                .requestMatchers("api/adm/**", "api/admin/**").hasRole(UserRole.ADMIN.name())
+                .requestMatchers("/api/users/**", "/api/seats/**", "/travel/**", "/api/flight/**", "/api/delivery/**",
+                "/api/auth/**", "/api/accommodations/**", "/api/townships/**", "/api/rooms/**", "/api/reservation/**")
+                        .permitAll()
+//                .hasAnyRole(UserRole.USER.name(), UserRole.ADMIN.name())
+                .anyRequest().permitAll()
+        );
 
-        // 로그인 설정
-        security.formLogin(config -> {
-            config.loginProcessingUrl("/api/users/login")
-                    .usernameParameter("username")
-                    .passwordParameter("password");
-            config.successHandler(new ApiSuccessHandler(tryLoginRepository, jwtUtil, userRepository, historyRepository));
-            config.failureHandler(new ApiFailHandler(tryLoginRepository));
-        });
+        // 폼 로그인
+        http.formLogin(login -> login
+                .loginProcessingUrl("/api/users/login")
+                .usernameParameter("username")
+                .passwordParameter("password")
+                .successHandler(new ApiSuccessHandler(tryLoginRepository, jwtUtil, userRepository, historyRepository))
+                .failureHandler(new ApiFailHandler(tryLoginRepository))
+        );
 
+        // 예외 처리
+        http.exceptionHandling(exception -> exception
+                .authenticationEntryPoint((request, response, authException) -> {
+                    response.setContentType("application/json;charset=UTF-8");
+                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                    response.getWriter().write("{\"error\": \"Unauthorized or token expired\"}");
+                })
+        );
 
-        // JWT 체크 (토큰 정보가 있으면 로그인을 건너뛴다)
-        security.addFilterAfter(new JWTCheckFilter(jwtUtil), LogoutFilter.class);
-        security.addFilterAfter(new TryLoginFilter(tryLoginRepository), JWTCheckFilter.class);
-        return security.build();
+        // JWT 필터 추가
+        http.addFilterBefore(new JWTCheckFilter(jwtUtil), UsernamePasswordAuthenticationFilter.class);
+        http.addFilterAfter(new TryLoginFilter(tryLoginRepository), JWTCheckFilter.class);
+
+        return http.build();
     }
 
-    // Password 암호화
     @Bean
-    public PasswordEncoder passwordEncoder(){
+    public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    // CORS 세부 설정
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("POST", "GET", "DELETE", "PUT", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        configuration.setAllowCredentials(true);
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration config = new CorsConfiguration();
+
+        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        config.setAllowedOriginPatterns(List.of("http://localhost:5173"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH"));
+        config.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+        config.setExposedHeaders(List.of("Authorization", "Content-Type"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
